EXTRA_DIST = \
  good/array-of-alias.tig \
  good/array.tig \
  good/break-in-while.tig \
  good/comments-nested.tig \
  good/compare-record-and-nil.tig \
  good/fact.tig \
  good/for-in-let.tig \
  good/fun-vs-var.tig \
  good/if.tig \
  good/local-vs-global-type.tig \
  good/merge.tig \
  good/mutually-recursive-functions.tig \
  good/mutually-recursive-procedures.tig \
  good/perso_array.tig \
  good/perso_nested_let.tig \
  good/perso_over.tig \
  good/perso_string-int-not-keywords.tig \
  good/perso_four-hex-backslash.tig \
  good/perso_big-lvalue.tig \
  good/perso_redefine-int.tig \
  good/perso_for-scope.tig \
  good/perso_if-void-body.tig \
  good/perso_axel.ribon-while-precedence.tig \
  good/queens.tig \
  good/record.tig \
  good/recursive-types.tig \
  good/shadowing-functions.tig \
  good/shadowing-types-separate.tig \
  good/test30.tig \
  good/test37.tig \
  good/test42.tig \
  good/test44.tig \
  good/test64.tig \
  good/test64.tih \
  good/three-name-spaces.tig \
  minimal/add.tig \
  minimal/concat.tig \
  minimal/declare-my-variable-hard.tig \
  minimal/hello-tigrou.tig \
  minimal/test27.tig \
  syntax/perso_bad_assigne.tig \
  syntax/perso_bad_let.tig \
  syntax/perso_bad_var.tig \
  syntax/perso_lexic_commentary.tig \
  syntax/perso_lexic_dollar.tig \
  syntax/perso_lexic_unclosed.tig \
  syntax/perso_call-separator-1.tig \
  syntax/perso_call-separator-2.tig \
  syntax/perso_function-without-argument-list.tig \
  syntax/perso_less-than-non-assoc-with-uminus.tig \
  syntax/perso_less-than-non-assoc.tig \
  syntax/perso_multi-functions.tig \
  syntax/perso_multi-types.tig \
  syntax/perso_multi-vars.tig \
  syntax/perso_nil-keyword.tig \
  syntax/perso_record-exp-1.tig \
  syntax/perso_record-exp-2.tig \
  syntax/perso_seqexp-1.tig \
  syntax/perso_seqexp-2.tig \
  syntax/perso_seqexp-3.tig \
  syntax/perso_seqexp-4.tig \
  syntax/perso_several-exps.tig \
  syntax/perso_syntax-vs-type-1.tig \
  syntax/perso_type-nil.tig \
  syntax/typeid.tig \
  bind/break-outside-loop.tig \
  bind/invalid-function-redefinition-1.tig \
  bind/invalid-type-redefinition.tig \
  bind/test17.tig \
  bind/test18.tig \
  bind/test19.tig \
  bind/undeclared-variable.tig \
  bind/unknown-record.tig \
  type/assign-loop-var.tig \
  type/field-in-not-record.tig \
  type/funarg-type-mismatch.tig \
  type/missing-arg.tig \
  type/nil-equal-nil.tig \
  type/test09.tig \
  type/test10.tig \
  type/test11.tig \
  type/test13.tig \
  type/test14.tig \
  type/test15.tig \
  type/test21.tig \
  type/test22.tig \
  type/test23.tig \
  type/test24.tig \
  type/test26.tig \
  type/test28.tig \
  type/test29.tig \
  type/test31.tig \
  type/test32.tig \
  type/test40.tig \
  type/test43.tig \
  type/too-many-args.tig \
  type/types-endless-recursion.tig \
  type/unconstrained-nil.tig \
  llvm/array.tig \
  llvm/array.expected \
  llvm/break.tig \
  llvm/break.expected \
  llvm/fact.tig \
  llvm/fact.expected \
  llvm/fibonacci.tig \
  llvm/fibonacci.expected \
  llvm/for.tig \
  llvm/for.expected \
  llvm/hello.tig \
  llvm/hello.expected \
  llvm/mutual-recursion.tig \
  llvm/mutual-recursion.expected \
  llvm/nested-funcs.tig \
  llvm/nested-funcs.expected \
  llvm/queens.tig \
  llvm/queens.expected \
  llvm/string-ops.tig \
  llvm/string-ops.expected \
  llvm/while.tig \
  llvm/while.expected \
  run_test.sh

TESTS = \
  good/array-of-alias.tig \
  good/array.tig \
  good/break-in-while.tig \
  good/comments-nested.tig \
  good/compare-record-and-nil.tig \
  good/fact.tig \
  good/for-in-let.tig \
  good/fun-vs-var.tig \
  good/if.tig \
  good/local-vs-global-type.tig \
  good/merge.tig \
  good/mutually-recursive-functions.tig \
  good/mutually-recursive-procedures.tig \
  good/perso_array.tig \
  good/perso_nested_let.tig \
  good/perso_over.tig \
  good/perso_string-int-not-keywords.tig \
  good/perso_four-hex-backslash.tig \
  good/perso_big-lvalue.tig \
  good/perso_redefine-int.tig \
  good/perso_for-scope.tig \
  good/perso_if-void-body.tig \
  good/perso_axel.ribon-while-precedence.tig \
  good/queens.tig \
  good/record.tig \
  good/recursive-types.tig \
  good/shadowing-functions.tig \
  good/shadowing-types-separate.tig \
  good/test30.tig \
  good/test37.tig \
  good/test42.tig \
  good/test44.tig \
  good/test64.tig \
  good/three-name-spaces.tig \
  minimal/add.tig \
  minimal/concat.tig \
  minimal/declare-my-variable-hard.tig \
  minimal/hello-tigrou.tig \
  minimal/test27.tig \
  syntax/perso_bad_assigne.tig \
  syntax/perso_bad_let.tig \
  syntax/perso_bad_var.tig \
  syntax/perso_lexic_commentary.tig \
  syntax/perso_lexic_dollar.tig \
  syntax/perso_lexic_unclosed.tig \
  syntax/perso_call-separator-1.tig \
  syntax/perso_call-separator-2.tig \
  syntax/perso_function-without-argument-list.tig \
  syntax/perso_less-than-non-assoc-with-uminus.tig \
  syntax/perso_less-than-non-assoc.tig \
  syntax/perso_multi-functions.tig \
  syntax/perso_multi-types.tig \
  syntax/perso_multi-vars.tig \
  syntax/perso_nil-keyword.tig \
  syntax/perso_record-exp-1.tig \
  syntax/perso_record-exp-2.tig \
  syntax/perso_seqexp-1.tig \
  syntax/perso_seqexp-2.tig \
  syntax/perso_seqexp-3.tig \
  syntax/perso_seqexp-4.tig \
  syntax/perso_several-exps.tig \
  syntax/perso_syntax-vs-type-1.tig \
  syntax/perso_type-nil.tig \
  syntax/typeid.tig \
  bind/break-outside-loop.tig \
  bind/invalid-function-redefinition-1.tig \
  bind/invalid-type-redefinition.tig \
  bind/test17.tig \
  bind/test18.tig \
  bind/test19.tig \
  bind/undeclared-variable.tig \
  bind/unknown-record.tig \
  type/assign-loop-var.tig \
  type/field-in-not-record.tig \
  type/funarg-type-mismatch.tig \
  type/missing-arg.tig \
  type/nil-equal-nil.tig \
  type/test09.tig \
  type/test10.tig \
  type/test11.tig \
  type/test13.tig \
  type/test14.tig \
  type/test15.tig \
  type/test21.tig \
  type/test22.tig \
  type/test23.tig \
  type/test24.tig \
  type/test26.tig \
  type/test28.tig \
  type/test29.tig \
  type/test31.tig \
  type/test32.tig \
  type/test40.tig \
  type/test43.tig \
  type/too-many-args.tig \
  type/types-endless-recursion.tig \
  type/unconstrained-nil.tig \
  llvm/array.tig \
  llvm/break.tig \
  llvm/fact.tig \
  llvm/fibonacci.tig \
  llvm/for.tig \
  llvm/hello.tig \
  llvm/mutual-recursion.tig \
  llvm/nested-funcs.tig \
  llvm/queens.tig \
  llvm/string-ops.tig \
  llvm/while.tig

TC = $(top_builddir)/src/tc

TESTS_ENVIRONMENT = TC="$(TC)"
LOG_COMPILER = $(srcdir)/run_test.sh

